@@ -245,7 +245,14 @@ splitter.status4evar-status-splitter:not(:hover)
 	-moz-box-direction: reverse;
 }
 
-.urlbar-input-layer[overlinkstate="fade-in"],
+.urlbar-input-layer[overlinkstate="fade-in"]
+{
+	-moz-transition-property: color;
+	-moz-transition-duration: 150ms;
+	color: transparent;
+}
+
+/* < Firefox 19 */
 .urlbar-input-layer[overlinkstate="fade-in"] html|input.urlbar-input:-moz-placeholder
 {
 	-moz-transition-property: color;
@@ -253,7 +260,22 @@ splitter.status4evar-status-splitter:not(:hover)
 	color: transparent;
 }
 
-.urlbar-input-layer[overlinkstate="fade-out"],
+/* >= Firefox 19 */
+.urlbar-input-layer[overlinkstate="fade-in"] html|input.urlbar-input::-moz-placeholder
+{
+	-moz-transition-property: color;
+	-moz-transition-duration: 150ms;
+	color: transparent;
+}
+
+.urlbar-input-layer[overlinkstate="fade-out"]
+{
+	-moz-transition-property: color;
+	-moz-transition-duration: 150ms;
+	-moz-transition-timing-function: cubic-bezier(0.0, 1.0, 1.0, 1.0);
+}
+
+/* < Firefox 19 */
 .urlbar-input-layer[overlinkstate="fade-out"] html|input.urlbar-input:-moz-placeholder
 {
 	-moz-transition-property: color;
@@ -261,8 +283,27 @@ splitter.status4evar-status-splitter:not(:hover)
 	-moz-transition-timing-function: cubic-bezier(0.0, 1.0, 1.0, 1.0);
 }
 
-.urlbar-input-layer[overlinkstate="showing"],
+/* >= Firefox 19 */
+.urlbar-input-layer[overlinkstate="fade-out"] html|input.urlbar-input::-moz-placeholder
+{
+	-moz-transition-property: color;
+	-moz-transition-duration: 150ms;
+	-moz-transition-timing-function: cubic-bezier(0.0, 1.0, 1.0, 1.0);
+}
+
+.urlbar-input-layer[overlinkstate="showing"]
+{
+	color: transparent;
+}
+
+/* < Firefox 19 */
 .urlbar-input-layer[overlinkstate="showing"] html|input.urlbar-input:-moz-placeholder
+{
+	color: transparent;
+}
+
+/* >= Firefox 19 */
+.urlbar-input-layer[overlinkstate="showing"] html|input.urlbar-input::-moz-placeholder
 {
 	color: transparent;
 }
